--- a/EmberCore/CoreAppSetting.json
+++ b/EmberCore/CoreAppSetting.json
@@ -2,5 +2,6 @@
   "CheckUpdate": true,
   "CheckComponentUpdate": true,
   "Locale": "System",
-  "PluginsFolder": "plugins"
+  "PluginsFolder": "plugins",
+  "CommandSourceOperationTimeLimit":  5
 }
