Example plugin update command handler part

--- a/ExamplePlugin/ExamplePlugin.csproj
+++ b/ExamplePlugin/ExamplePlugin.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EmberCore\EmberCore.csproj" />
     <ProjectReference Include="..\EmberKernel\EmberKernel.csproj">
       <Private>false</Private>
     </ProjectReference>
