--- a/ExamplePlugin/ExamplePlugin.csproj
+++ b/ExamplePlugin/ExamplePlugin.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmberCore\EmberCore.csproj" />
+    <ProjectReference Include="..\EmberCore\EmberCore.csproj">
+      <Private>false</Private>
+    </ProjectReference>
     <ProjectReference Include="..\EmberKernel\EmberKernel.csproj">
       <Private>false</Private>
     </ProjectReference>
