Create EventBus folder

--- a/EmberKernel/EmberKernel.csproj
+++ b/EmberKernel/EmberKernel.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\EventBus\" />
+  </ItemGroup>
+
 </Project>
