Load plugin in dirty cache folder

--- a/EmberCore/CoreAppSetting.json
+++ b/EmberCore/CoreAppSetting.json
@@ -3,5 +3,6 @@
   "CheckComponentUpdate": true,
   "Locale": "System",
   "PluginsFolder": "plugins",
-  "CommandSourceOperationTimeLimit":  5
+  "PluginsCacheFolder": "cache",
+  "CommandSourceOperationTimeLimit": 5
 }
