--- a/EmberMemoryReader/EmberMemoryReader.csproj
+++ b/EmberMemoryReader/EmberMemoryReader.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\Collector\Readers\" />
+    <Folder Include="Components\Collector\Data\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
