--- a/EmberCore/EmberCore.csproj
+++ b/EmberCore/EmberCore.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmberKernel\EmberKernel.csproj" />
+    <ProjectReference Include="..\share\OsuUtils\OsuUtils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
