--- a/EmberMemoryReader/EmberMemoryReader.csproj
+++ b/EmberMemoryReader/EmberMemoryReader.csproj
@@ -10,6 +10,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath></OutputPath>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
