--- a/EmberCore/EmberCore.csproj
+++ b/EmberCore/EmberCore.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>EmberCore.Program</StartupObject>
     <LangVersion>8.0</LangVersion>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -26,7 +27,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmberKernel\EmberKernel.csproj" />
-    <ProjectReference Include="..\share\OsuUtils\OsuUtils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
