--- a/EmberWpfCore/EmberWpfCore.csproj
+++ b/EmberWpfCore/EmberWpfCore.csproj
@@ -12,7 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmberCore\EmberCore.csproj" />
+    <ProjectReference Include="..\EmberCore\EmberCore.csproj">
+      <Private>false</Private>
+      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
+    </ProjectReference>
     <ProjectReference Include="..\EmberKernel\EmberKernel.csproj">
       <Private>false</Private>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
