do some ui word

--- a/EmberWpfCore/EmberWpfCore.csproj
+++ b/EmberWpfCore/EmberWpfCore.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EmberCore\EmberCore.csproj" />
     <ProjectReference Include="..\EmberKernel\EmberKernel.csproj">
       <Private>false</Private>
@@ -21,6 +25,10 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="logo.png" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
