--- a/plugins/MultiplayerDownloader/MultiplayerDownloader.csproj
+++ b/plugins/MultiplayerDownloader/MultiplayerDownloader.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\EmberKernel\EmberKernel.csproj" />
+    <ProjectReference Include="..\..\EmberKernel\EmberKernel.csproj">
+      <Private>false</Private>
+      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
