Add OsuDatabase Reader

--- a/share/OsuSqliteDatabase/OsuSqliteDatabase.csproj
+++ b/share/OsuSqliteDatabase/OsuSqliteDatabase.csproj
@@ -12,8 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmberSqlite\EmberSqlite.csproj">
-      <Private>false</Private>
-      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
+      <Private>true</Private>
     </ProjectReference>
   </ItemGroup>
 
@@ -22,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
