--- a/plugins/EmberSqliteSynchronizer/EmberSqliteSynchronizer.csproj
+++ b/plugins/EmberSqliteSynchronizer/EmberSqliteSynchronizer.csproj
@@ -14,7 +14,8 @@
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
     </ProjectReference>
     <ProjectReference Include="..\..\share\OsuSqliteDatabase\OsuSqliteDatabase.csproj">
-      <Private>true</Private>
+      <Private>false</Private>
+      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
     </ProjectReference>
   </ItemGroup>
 
