--- a/EmberMemoryReader/EmberMemoryReader.csproj
+++ b/EmberMemoryReader/EmberMemoryReader.csproj
@@ -18,6 +18,10 @@
       <Private>false</Private>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
     </ProjectReference>
+	<ProjectReference Include="..\share\EmberMemory\EmberMemory.csproj">
+		<Private>true</Private>
+		<CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
+	</ProjectReference>
     <ProjectReference Include="..\share\OsuUtils\OsuUtils.csproj">
       <Private>true</Private>
     </ProjectReference>
