--- a/plugins/MultiplayerDownloader/MultiplayerDownloader.csproj
+++ b/plugins/MultiplayerDownloader/MultiplayerDownloader.csproj
@@ -4,7 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
+    <ProjectReference Include="..\..\EmberCore\EmberCore.csproj">
+      <Private>false</Private>
+    </ProjectReference>
     <ProjectReference Include="..\..\EmberKernel\EmberKernel.csproj">
       <Private>false</Private>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
