--- a/EmberKernel/EmberKernel.csproj
+++ b/EmberKernel/EmberKernel.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Statistic\Pattern\Lexical\" />
+    <Folder Include="Services\Statistic\Pattern\Parser\" />
+  </ItemGroup>
+
 </Project>
