A little refactor and create PpCalculator project

--- a/src/plugins/ExamplePlugin/ExamplePlugin.csproj
+++ b/src/plugins/ExamplePlugin/ExamplePlugin.csproj
@@ -21,6 +21,7 @@
       <Private>false</Private>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
     </ProjectReference>
+    <ProjectReference Include="..\osu\EmberMemoryReader.Abstract\EmberMemoryReader.Abstract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
