--- a/src/plugins/osu/EmberSqliteSynchronizer/EmberSqliteSynchronizer.csproj
+++ b/src/plugins/osu/EmberSqliteSynchronizer/EmberSqliteSynchronizer.csproj
@@ -17,6 +17,7 @@
       <Private>false</Private>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
     </ProjectReference>
+    <ProjectReference Include="..\EmberMemoryReader.Abstract\EmberMemoryReader.Abstract.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
