--- a/src/plugins/statistic/Statistic.WpfUI/Statistic.WpfUI.csproj
+++ b/src/plugins/statistic/Statistic.WpfUI/Statistic.WpfUI.csproj
@@ -6,10 +6,15 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\EmberKernel\EmberKernel.csproj">
       <Private>false</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Statistic.Abstract\Statistic.Abstract.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
