--- a/src/plugins/osu/EmberLyricDisplayerPlugin/EmberLyricDisplayerPlugin.csproj
+++ b/src/plugins/osu/EmberLyricDisplayerPlugin/EmberLyricDisplayerPlugin.csproj
@@ -4,12 +4,26 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="LyricsFinder" Version="1.0.0" />
+    <PackageReference Include="z440.atl.core" Version="3.13.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmberKernel\EmberKernel.csproj" />
+    <ProjectReference Include="..\..\..\EmberCore\EmberCore.csproj">
+      <Private>false</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\EmberKernel\EmberKernel.csproj">
+      <Private>false</Private>
+    </ProjectReference>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="move $(OutDir)\$(TargetFileName) $(OutDir)\$(TargetName).dll&#xD;&#xA;mkdir $(SolutionDir)build\$(ConfigurationName)\plugins\$(ProjectName)&#xD;&#xA;copy $(OutDir)\*  $(SolutionDir)build\$(ConfigurationName)\plugins\$(ProjectName)" />
+  </Target>
 
 </Project>
