--- a/src/EmberCore/EmberCore.csproj
+++ b/src/EmberCore/EmberCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>EmberCore.Program</StartupObject>
     <LangVersion>8.0</LangVersion>
